# cloudcomputing

./: .gitignore
cloudapp-m2/: OrphanPages.java  PopularityLeague.java  PopularityLeauge.java  TitleCount.java  TopPopularLinks.java  TopTitleStatistics.java  TopTitles.java  TopWords.java  WordCount.java
cloudapp-m3/a/: RandomSentenceSpout.java  WordCountBolt.java
cloudapp-m3/b/: FileReaderSpout.java  TopWordFinderTopologyPartB.java
cloudapp-m3/c/: NormalizerBolt.java  TopWordFinderTopologyPartC.java
cloudapp-m3/d/: TopNFinderBolt.java  TopWordFinderTopologyPartD.java
cloudapp-m4/: CreateTable.java  SuperTable.java
cloudapp-mp5/: A.java  ATask.java  BTask.java  C.java  CTask.java  DTask.java
mp1_assignment/: Grader.sh  MP1Node.cpp  MP1Node.h  Member.h
mp2_assignment/: .gitignore  CMakeLists.txt  MP1Node.cpp  MP1Node.h  MP2Node.cpp  MP2Node.h
